--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -46,6 +46,16 @@
         android:textSize="14sp" />
 
     <Button
+        android:id="@+id/verifyBtn"
+        android:layout_width="250dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/cid_blue_light"
+        android:text="Verify USER_ONE"
+        android:textColor="@color/white_smoke"
+        android:textSize="14sp" />
+
+    <Button
         android:id="@+id/deleteBtn"
         android:layout_width="250dp"
         android:layout_height="35dp"
